# chexvision-mini

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
chexvision_mini/: __init__.py  __main__.py  augment.py  card.py  config.yaml  data.py  gradcheck.py  hub.py  inference.py  layers.py  losses.py  metrics.py  network.py  optim.py  regularizers.py  train.py
docs/: README.md  nnfs_alignment.md
docs/figures/: figlib.js  figures-mini.html  mini_fig1_pipeline.js  mini_fig2_backprop.js
docs/references/: nnsp_readthrough.md  references.md
docs/results/: README.md  history.json  metrics.json  test_labels.npy  test_scores.npy  val_labels.npy  val_scores.npy
tests/: test_chexvision_mini.py
