[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chexvision-mini"
version = "0.1.0"
description = "A true from-scratch neural network in pure NumPy — companion to CheXVision"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "BIG D(ATA) Team" }]

dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "datasets>=2.16.0",
    "huggingface-hub>=0.20.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0", "pytest-cov>=5.0.0"]

[tool.setuptools]
packages = ["chexvision_mini"]

[tool.setuptools.package-data]
chexvision_mini = ["config.yaml"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["chexvision_mini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
